--- a/templates/auditoria.html
+++ b/templates/auditoria.html
@@ -21,7 +21,7 @@
 
 <body>
     <div class="rc-header">
-        <div></div> <!-- Sin botón de regreso en pantalla principal -->
+        <a href="#" class="rc-back"></a> <!-- Sin acción, es el home 1 -->
         <h1 class="rc-screen-title">Panel Auditor</h1>
         <div></div>
     </div>
